<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kangw.evolut.FriendTransactionActivity"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:id="@+id/txtPaymentAmt"
            android:hint="@string/payment_amount"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/tag_your_friends_here"
            android:id="@+id/txtFriendAmt"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:ems="10"
            android:id="@+id/txtTagName" />

        <com.cunoraz.tagview.TagView
            xmlns:tagview="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tag_group"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            tagview:lineMargin="5dp"
            tagview:tagMargin="5dp"
            tagview:textPaddingLeft="8dp"
            tagview:textPaddingTop="5dp"
            tagview:textPaddingRight="8dp"
            tagview:textPaddingBottom="5dp" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:checkedButton="@id/radioPay">
        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="Payment Type :"
            />
        <RadioButton android:id="@+id/radioPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pay"
            android:layout_marginHorizontal="30dp"/>

        <RadioButton android:id="@+id/radioRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Request" />
    </RadioGroup>

        <EditText
            android:id="@+id/txtComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/comments"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="Cancel"/>

    </LinearLayout>

</LinearLayout>